Add responsive layout.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Pattern Party</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,600" rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -41,7 +42,7 @@
           </div>
         </div>
         <div class="section-body hidden" data-tab="2">
-          <img class="accordion-img"src="http://www.fillmurray.com/420/480" alt="image description">
+          <img class="accordion-img"src="http://morganfillman.space/420/480" alt="image description">
           <div class="accordion-text-content">
             <h4>8-bit live-edge small batch intelligentsia</h4>
             <hr>
@@ -51,7 +52,7 @@
           </div>
         </div>
         <div class="section-body hidden" data-tab="3">
-          <img class="accordion-img"src="http://www.fillmurray.com/420/480" alt="image description">
+          <img class="accordion-img"src="http://www.stevensegallery.com/420/480" alt="image description">
           <div class="accordion-text-content">
             <h4>8-bit live-edge small batch intelligentsia</h4>
             <hr>
@@ -61,7 +62,7 @@
           </div>
         </div>
         <div class="section-body hidden" data-tab="4">
-          <img class="accordion-img"src="http://www.fillmurray.com/420/480" alt="image description">
+          <img class="accordion-img"src="https://www.placecage.com/420/480" alt="image description">
           <div class="accordion-text-content">
             <h4>8-bit live-edge small batch intelligentsia</h4>
             <hr>
