Add link to code in view code button.

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
     </div>
     </section>
-    <button class="view-code"type="button" name="button">VIEW CODE</button>
+    <a class="view-code" href="https://codepen.io/jsullivan5/pen/JyeBaX">VIEW CODE</a>
     <script src="scripts.js"></script>
   </body>
 </html>
