--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <hr align="center">
     <section class="accordion-wrapper">
       <nav class="tab-wrapper">
-        <div class="tab tab-active " data-tab="1">
+        <div class="tab tab-active tab-1" data-tab="1">
           <p>Tab 1</p>
         </div>
         <div class="tab" data-tab="2">
@@ -31,7 +31,7 @@
         </div>
       </nav>
       <div class="content-wrapper">
-        <div class="section-body" data-tab="1">
+        <div class="section-body tab-1-content" data-tab="1">
           <img class="accordion-img"src="http://www.fillmurray.com/420/480" alt="image description">
           <div class="accordion-text-content">
             <h4>8-bit live-edge small batch intelligentsia</h4>
@@ -41,7 +41,7 @@
             <p>Squid asymmetrical cliche, sustainable prism 3 wolf moon pinterest locavore tbh schlitz copper mug ethical twee hexagon. Humblebrag trust fund woke, cold-pressed godard migas keffiyeh.</p>
           </div>
         </div>
-        <div class="section-body hidden" data-tab="2">
+        <div class="section-body hidden tab-2-content" data-tab="2">
           <img class="accordion-img"src="http://morganfillman.space/420/480" alt="image description">
           <div class="accordion-text-content">
             <h4>8-bit live-edge small batch intelligentsia</h4>
@@ -51,7 +51,7 @@
             <p>Health goth vice banjo vaporware artisan pour-over occupy kogi godard williamsburg pok pok. Ugh hot chicken butcher hexagon kinfolk, raw denim helvetica sustainable. </p>
           </div>
         </div>
-        <div class="section-body hidden" data-tab="3">
+        <div class="section-body hidden tab-3-content" data-tab="3">
           <img class="accordion-img"src="http://www.stevensegallery.com/420/480" alt="image description">
           <div class="accordion-text-content">
             <h4>8-bit live-edge small batch intelligentsia</h4>
@@ -61,7 +61,7 @@
             <p>Yuccie godard readymade church-key vice DIY. Edison bulb selvage meggings stumptown lo-fi salvia cred actually ramps venmo unicorn photo booth. Fanny pack offal jean shorts, banh mi gochujang chartreuse forage etsy +1 activated charcoal succulents lomo prism sartorial.</p>
           </div>
         </div>
-        <div class="section-body hidden" data-tab="4">
+        <div class="section-body hidden tab-4-content" data-tab="4">
           <img class="accordion-img"src="https://www.placecage.com/420/480" alt="image description">
           <div class="accordion-text-content">
             <h4>8-bit live-edge small batch intelligentsia</h4>
@@ -72,6 +72,53 @@
           </div>
         </div>
     </div>
+    </section>
+    <a class="view-code" href="https://codepen.io/jsullivan5/pen/JyeBaX">VIEW CODE</a>
+    <p>Flexible Cards</p>
+    <hr align="center">
+    <section class="card-wrapper">
+      <div class="card card-1">
+        <div class="card-title">
+          <h2>Some Title</h2>
+        </div>
+          <img class="card-img"src="http://www.stevensegallery.com/420/480" alt="image description">
+      </div>
+      <div class="card card-2">
+        <div class="card-title">
+          <h2>Some Title</h2>
+        </div>
+          <img class="card-img"src="http://www.stevensegallery.com/420/480" alt="image description">
+      </div>
+      <div class="card card-3">
+        <div class="card-title">
+          <h2>Some Title</h2>
+        </div>
+          <img class="card-img"src="http://www.stevensegallery.com/420/480" alt="image description">
+      </div>
+      <div class="card card-4">
+        <div class="card-title">
+          <h2>Some Title</h2>
+        </div>
+          <img class="card-img"src="http://www.stevensegallery.com/420/480" alt="image description">
+      </div>
+      <div class="card card-5">
+        <div class="card-title">
+          <h2>Some Title</h2>
+        </div>
+          <img class="card-img"src="http://www.stevensegallery.com/420/480" alt="image description">
+      </div>
+      <div class="card card-6">
+        <div class="card-title">
+          <h2>Some Title</h2>
+        </div>
+          <img class="card-img"src="http://www.stevensegallery.com/420/480" alt="image description">
+      </div>
+      <div class="card card-7">
+        <div class="card-title">
+          <h2>Some Title</h2>
+        </div>
+          <img class="card-img"src="http://www.stevensegallery.com/420/480" alt="image description">
+      </div>
     </section>
     <a class="view-code" href="https://codepen.io/jsullivan5/pen/JyeBaX">VIEW CODE</a>
     <script src="scripts.js"></script>
