--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       </div>
       <div class="card card-2">
         <div class="card-title">
-          <h2>Some Title</h2>
+          <h2>Some Title Blah Blah Blah Blah Blah Blah Blah </h2>
         </div>
           <img class="card-img"src="http://www.stevensegallery.com/420/480" alt="image description">
       </div>
