Add collapsable nav

--- a/index.html
+++ b/index.html
@@ -121,6 +121,22 @@
       </div>
     </section>
     <a class="view-code" href="https://codepen.io/jsullivan5/pen/WEmqZo">VIEW CODE</a>
+    <nav class="main-nav">
+      <div class="nav-logo-wrapper">
+        <img class="nav-logo" src="http://www.stevensegallery.com/50/50" alt="logo">
+        <h2 class="nav-menu">Menu</h2>
+      </div>
+      <div class="nav-link-wrapper hidden">
+        <a class="nav-collapse nav-link" href="#">Navigation Link 1</a>
+        <a class="nav-collapse nav-link" href="#">Navigation Link 2</a>
+        <a class="nav-collapse nav-link" href="#">Navigation Link 3</a>
+        <div class="search-wrapper">
+          <img class="search-img" src="assets/magnifier-tool.svg" alt="magnifying glass">
+          <input class="nav-collapse nav-search" type="text" name="" value="" placeholder="Search">
+        </div>
+      </div>
+    </nav>
+    <a class="view-code" href="https://codepen.io/jsullivan5/pen/WEmqZo">VIEW CODE</a>
     <script src="scripts.js"></script>
   </body>
 </html>
